Correct alignment

--- a/src/org/accesointeligente/client/views/AboutProjectView.css
+++ b/src/org/accesointeligente/client/views/AboutProjectView.css
@@ -28,7 +28,6 @@
 }
 
 .maxW {
-	max-width: 85%;
 	color: #5B595F;
 	line-height: 140%;
 }
